коллекция теперь храниться в бд. Команды также взаимодейтсвуют теперь с бд